--- a/index.html
+++ b/index.html
@@ -1,2 +1,43 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Fejl</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" />
+  <style>
+    * {
 
+    }
+
+    @keyframes blink-animation {
+      to {
+        visibility: auto;
+      }
+    }
+
+    header {
+      text-transform: uppercase;
+      background: #002A4F;
+      border-bottom:10px solid #CECECE;
+      text-align:center;
+      font:bold 30px arial;
+      color:#fff;
+      padding-bottom:45px
+    }
+
+    .hidden {
+      margin-right: -3ch;
+      animation: blink-animation 4s steps(2, start) infinite;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    Nemlog-in<blink class="hidden">(d)</blink>
+  </header>
+
+  <h1 style="font-size: 50px; text-align: center;margin-top: 30px;">
+    🚨🚨🚨🚨🚨THIS IS AN EXPERIMENT 🚨🚨🚨🚨🚨
+  </h1>
+</body>
+</html>
